--- a/index.html
+++ b/index.html
@@ -890,6 +890,9 @@
                         <div style="margin-top: 16px; display: flex; gap: 12px; flex-wrap: wrap;">
                             <button class="btn" onclick="addSubjectRow()">➕ Add Subject</button>
                             <button class="btn btn-secondary" onclick="addWeekColumn()">📅 Add Week</button>
+                            <button class="btn" onclick="markWeekComplete()" style="background: linear-gradient(135deg, #10b981 0%, #059669 100%);">
+                                ✅ Mark Week Complete
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -955,7 +958,12 @@
                             </tbody>
                         </table>
                     </div>
-                    <button class="btn" onclick="addTimeSlot()" style="margin-top: 16px;">➕ Add Time Slot</button>
+                    <div style="margin-top: 16px; display: flex; gap: 12px; flex-wrap: wrap;">
+                        <button class="btn" onclick="addTimeSlot()">➕ Add Time Slot</button>
+                        <button class="btn btn-secondary" onclick="markDayComplete()" style="background: linear-gradient(135deg, #10b981 0%, #059669 100%);">
+                            ✅ Mark Day Complete
+                        </button>
+                    </div>
                 </div>
             </div>
 
@@ -3794,6 +3802,11 @@
             setupAutoSaveListeners();
             createSaveIndicator();
             
+            // Setup schedule auto-update
+            setTimeout(() => {
+                setupScheduleAutoUpdate();
+            }, 500);
+            
             // Update header info after data is loaded
             setTimeout(() => {
                 updateHeaderInfo();
@@ -3808,5 +3821,5 @@
             }
         });
     </script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'96f87eeba63a0cd8',t:'MTc1NTI1ODg1MS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'96fadabcb447c630',t:'MTc1NTI4MzU4My4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
